compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__todo__todo_as.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/todo.rs
assertion_line: 16
expression: "\npub fn main() {\n  todo as \"wibble\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  todo as "wibble"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> any().
main() ->
    erlang:error(#{gleam_error => todo,
            message => <<"wibble"/utf8>>,
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 3}).
